--- a/DHSC.ANS.API.Consumer.Docs/input/partials/_Head.cshtml
+++ b/DHSC.ANS.API.Consumer.Docs/input/partials/_Head.cshtml
@@ -5,8 +5,8 @@
 
     <title>@Model["SiteTitle"]</title>
 
-    <!--<link href="assets/css/manifest.css" rel="stylesheet" />-->
     <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="assets/css/atom-one-light.min.css" rel="stylesheet" />
 
     <link rel="canonical" href='https://@Model["ServiceDomain"]/'>
     <link rel="icon" sizes="48x48" href="assets/images/favicon.ico">
