--- a/DHSC.ANS.API.Consumer.Docs/input/partials/_Head.cshtml
+++ b/DHSC.ANS.API.Consumer.Docs/input/partials/_Head.cshtml
@@ -1,4 +1,6 @@
 <head>
+    <meta name="robots" content="noindex, nofollow">
+
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
