--- a/DHSC.ANS.API.Consumer.Docs/input/partials/_Head.cshtml
+++ b/DHSC.ANS.API.Consumer.Docs/input/partials/_Head.cshtml
@@ -12,7 +12,7 @@
 
     <link rel="canonical" href='https://@Model["ServiceDomain"]/'>
     <link rel="icon" sizes="48x48" href="assets/images/favicon.ico">
-    <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" sizes="any" href="assets/images/favicon.svg" type="image/svg+xml">
     <link rel="mask-icon" href="assets/images/govuk-icon-mask.svg" color="#0b0c0c">
     <link rel="apple-touch-icon" href="assets/images/govuk-icon-180.png">
 
