--- a/DHSC.ANS.API.Consumer.Docs/output/assets/css/main.css
+++ b/DHSC.ANS.API.Consumer.Docs/output/assets/css/main.css
@@ -66,14 +66,14 @@
   font-family: "GDS Transport";
   font-style: normal;
   font-weight: normal;
-  src: url("assets/fonts/light-94a07e06a1-v2.woff2") format("woff2"), url("assets/fonts/light-f591b13f7d-v2.woff") format("woff");
+  src: url("../../assets/fonts/light-94a07e06a1-v2.woff2") format("woff2"), url("../../assets/fonts/light-f591b13f7d-v2.woff") format("woff");
   font-display: fallback;
 }
 @font-face {
   font-family: "GDS Transport";
   font-style: normal;
   font-weight: bold;
-  src: url("assets/fonts/bold-b542beb274-v2.woff2") format("woff2"), url("assets/fonts/bold-affa96571d-v2.woff") format("woff");
+  src: url("../../assets/fonts/bold-b542beb274-v2.woff2") format("woff2"), url("../../assets/fonts/bold-affa96571d-v2.woff") format("woff");
   font-display: fallback;
 }
 @media print {
@@ -1590,7 +1590,7 @@
   display: inline-block;
   min-width: 125px;
   padding-top: 112px;
-  background-image: url("assets/images/govuk-crest.svg");
+  background-image: url("../../assets/images/govuk-crest.svg");
   background-repeat: no-repeat;
   background-position: 50% 0%;
   background-size: 125px 102px;
