--- a/DHSC.ANS.Service/app/views/index.html
+++ b/DHSC.ANS.Service/app/views/index.html
@@ -106,7 +106,7 @@
       }) }}
 
       <div class="govuk-!-margin-top-5">
-        {{ govukButton({ text: "Apply", href: "#" }) }}
+        {{ govukButton({ text: "Start New HSA4 Form", href: "/questions/patient-details/do-you-know-the-patients-nhs-number" }) }}
       </div>
 
     </div>
