--- a/DHSC.ANS.Service/app/views/layouts/question-page.html
+++ b/DHSC.ANS.Service/app/views/layouts/question-page.html
@@ -19,7 +19,7 @@
         <button type="submit" class="govuk-button" data-module="govuk-button">
           Continue
         </button>
-        <button type="submit" class="govuk-button govuk-button--secondary" formaction="/save-and-exit">
+        <button type="submit" class="govuk-button govuk-button--secondary" formaction="/">
           Save and exit
         </button>
       </form>
