--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-hospital-or-clinic-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-hospital-or-clinic-number.html
@@ -34,7 +34,7 @@
 
     <input class="govuk-input"
            id="hospital-number"
-           name="patientInformation.hospitalOrClinicNumber"
+           name="patientInformation.hospitalOrClinic.hospitalOrClinicNumber"
            type="text"
            inputmode="numeric"
            pattern="[0-9]*"
