--- a/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-another-country.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-another-country.html
@@ -1,3 +1,5 @@
+{% from "govuk/components/radios/macro.njk" import govukRadios %}
+
 {% extends "../../layouts/question-page.html" %}
 
 {% set pageName = "Patient’s details" %}
@@ -18,45 +20,30 @@
     {% endif %}
   {% endfor %}
 
-  <div class="govuk-form-group {% if error %}govuk-form-group--error{% endif %}">
-    <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h2 class="govuk-fieldset__heading">
-          Does the patient live in another country?
-        </h2>
-      </legend>
+  {{ govukRadios({
+    name: "patientInformation.country.otherCountry",
+    fieldset: {
+      legend: {
+        text: "Does the patient live in another country?",
+        isPageHeading: true,
+        classes: "govuk-fieldset__legend--l"
+      }
+    },
+    errorMessage: error and {
+      text: error.message
+    },
+    items: [
+      {
+        value: "yes",
+        text: "Yes",
+        checked: checked("patientInformation.country.otherCountry", "yes")
+      },
+      {
+        value: "no",
+        text: "No",
+        checked: checked("patientInformation.country.otherCountry", "no")
+      }
+    ]
+  }) }}
 
-      {% if error %}
-        <span class="govuk-error-message">
-          <span class="govuk-visually-hidden">Error:</span> {{ error.message }}
-        </span>
-      {% endif %}
-
-      <div class="govuk-radios">
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input"
-                 id="lives-abroad-yes"
-                 name="patientInformation.country.otherCountry"
-                 type="radio"
-                 value="yes"
-                 {{ checked("patientInformation.country.otherCountry", "yes") }}>
-          <label class="govuk-label govuk-radios__label" for="lives-abroad-yes">
-            Yes
-          </label>
-        </div>
-
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input"
-                 id="lives-abroad-no"
-                 name="patientInformation.country.otherCountry"
-                 type="radio"
-                 value="no"
-                 {{ checked("patientInformation.country.otherCountry", "no") }}>
-          <label class="govuk-label govuk-radios__label" for="lives-abroad-no">
-            No
-          </label>
-        </div>
-      </div>
-    </fieldset>
-  </div>
 {% endblock %}
