--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-date-of-birth.html
@@ -1,3 +1,5 @@
+{% from "govuk/components/date-input/macro.njk" import govukDateInput %}
+
 {% extends "../../layouts/question-page.html" %}
 
 {% set pageName = "Patient’s details" %}
@@ -18,53 +20,39 @@
     {% endif %}
   {% endfor %}
 
-  <div class="govuk-form-group {% if error %}govuk-form-group--error{% endif %}">
-    <fieldset class="govuk-fieldset" role="group" aria-describedby="dob-hint">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h2 class="govuk-fieldset__heading">
-          What is the patient’s date of birth?
-        </h2>
-      </legend>
+  {{ govukDateInput({
+    id: "dob",
+    namePrefix: "patientInformation.dateOfBirth",
+    fieldset: {
+      legend: {
+        text: "What is the patient’s date of birth?",
+        isPageHeading: true,
+        classes: "govuk-fieldset__legend--l"
+      }
+    },
+    hint: {
+      text: "For example, 27 3 1987"
+    },
+    errorMessage: error and {
+      text: error.message
+    },
+    items: [
+      {
+        name: "day",
+        classes: "govuk-input--width-2",
+        value: data["patientInformation.dateOfBirth.day"] or ""
+      },
+      {
+        name: "month",
+        classes: "govuk-input--width-2",
+        value: data["patientInformation.dateOfBirth.month"] or ""
+      },
+      {
+        name: "year",
+        classes: "govuk-input--width-4",
+        value: data["patientInformation.dateOfBirth.year"] or ""
+      }
+    ]
+  }) }}
 
-      <div id="dob-hint" class="govuk-hint">
-        For example, 27 3 1987
-      </div>
-
-      {% if error %}
-        <span id="dob-error" class="govuk-error-message">
-          <span class="govuk-visually-hidden">Error:</span> {{ error.message }}
-        </span>
-      {% endif %}
-
-      <div class="govuk-date-input" id="dob">
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-day">Day</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
-                   id="dob-day" name="patientInformation.dateOfBirth.day" type="text"
-                   inputmode="numeric"
-                   value="{{ data['patientInformation.dateOfBirth.day'] or '' }}">
-          </div>
-        </div>
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-month">Month</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-2"
-                   id="dob-month" name="patientInformation.dateOfBirth.month" type="text"
-                   inputmode="numeric"
-                   value="{{ data['patientInformation.dateOfBirth.month'] or '' }}">
-          </div>
-        </div>
-        <div class="govuk-date-input__item">
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-date-input__label" for="dob-year">Year</label>
-            <input class="govuk-input govuk-date-input__input govuk-input--width-4"
-                   id="dob-year" name="patientInformation.dateOfBirth.year" type="text"
-                   inputmode="numeric"
-                   value="{{ data['patientInformation.dateOfBirth.year'] or '' }}">
-          </div>
-        </div>
-      </div>
-    </fieldset>
-  </div>
 {% endblock %}
