--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-name.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-name.html
@@ -1,3 +1,5 @@
+{% from "govuk/components/input/macro.njk" import govukInput %}
+
 {% extends "../../layouts/question-page.html" %}
 
 {% set pageName = "Patient’s details" %}
@@ -10,6 +12,7 @@
 {% set sectionTitle = "Patient’s details" %}
 
 {% block form %}
+
   {% set error = null %}
   {% for e in errors %}
     {% if e.field == "patientInformation.name.fullName" %}
@@ -17,25 +20,21 @@
     {% endif %}
   {% endfor %}
 
-  <div class="govuk-form-group {% if error %}govuk-form-group--error{% endif %}">
-    <label class="govuk-label govuk-label--l" for="full-name">
-      What is the patient’s name?
-    </label>
-    <div id="full-name-hint" class="govuk-hint">
-      Enter the patient’s full name
-    </div>
+  {{ govukInput({
+    id: "full-name",
+    name: "patientInformation.name.fullName",
+    label: {
+      text: "What is the patient’s name?",
+      classes: "govuk-label--l"
+    },
+    hint: {
+      text: "Enter the patient’s full name"
+    },
+    spellcheck: false,
+    errorMessage: error and {
+      text: error.message
+    },
+    value: data["patientInformation.name.fullName"] or ""
+  }) }}
 
-    {% if error %}
-      <span id="full-name-error" class="govuk-error-message">
-        <span class="govuk-visually-hidden">Error:</span> {{ error.message }}
-      </span>
-    {% endif %}
-
-    <input class="govuk-input"
-           id="full-name"
-           name="patientInformation.name.fullName"
-           type="text"
-           spellcheck="false"
-           value="{{ data['patientInformation.name.fullName'] or '' }}">
-  </div>
 {% endblock %}
