--- a/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-another-country.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-another-country.html
@@ -5,7 +5,7 @@
 {% set pageName = "Patient’s details" %}
 {% set currentPage = "does-the-patient-live-in-another-country" %}
 {% set questionGroup = "patient-details" %}
-{% set formAction = "/question/" + questionGroup + "/" + currentPage %}
+{% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set nextPage = "practitioner-clinic-postcode" %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
