--- a/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-england-or-wales.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-england-or-wales.html
@@ -6,7 +6,7 @@
 {% set nextPage = "" %}
 {% set currentPage = "does-the-patient-live-in-england-or-wales" %}
 {% set questionGroup = "patient-details" %}
-{% set formAction = "/question/" + questionGroup + "/" + currentPage %}
+{% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
