--- a/DHSC.ANS.Service/app/views/questions/patient-details/hsa1-signing-location-postcode.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/hsa1-signing-location-postcode.html
@@ -6,7 +6,7 @@
 {% set pageName = "Practitioner’s details" %}
 {% set currentPage = "hsa1-signing-location-postcode" %}
 {% set questionGroup = "practitioner-details" %}
-{% set formAction = "/question/" + questionGroup + "/" + currentPage %}
+{% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set nextPage = "" %}
 {% set questionNumber = 5 %}
 {% set totalQuestions = 9 %}
