--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-place-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-place-number.html
@@ -6,7 +6,7 @@
 {% set nextPage = "" %}
 {% set currentPage = "do-you-know-the-place-number" %}
 {% set questionGroup = "patient-details" %}
-{% set formAction = "/question/" + questionGroup + "/" + currentPage %}
+{% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
 {% set sectionTitle = "Patient’s details" %}
