--- a/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-postcode.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/what-is-the-patients-postcode.html
@@ -5,7 +5,7 @@
 {% set pageName = "Patient’s details" %}
 {% set currentPage = "what-is-the-patients-postcode" %}
 {% set questionGroup = "patient-details" %}
-{% set formAction = "/question/" + questionGroup + "/" + currentPage %}
+{% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set nextPage = "hsa1-signing-location-postcode" %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
