--- a/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-place-number.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/do-you-know-the-place-number.html
@@ -2,14 +2,13 @@
 
 {% extends "../../layouts/question-page.html" %}
 
-{% set pageName = "Patient’s details" %}
 {% set nextPage = "" %}
 {% set currentPage = "do-you-know-the-place-number" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set questionNumber = 3 %}
 {% set totalQuestions = 9 %}
-{% set sectionTitle = "Patient’s details" %}
+{% set sectionTitle = "Patient's details" %}
 
 {% block form %}
 
