--- a/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-another-country.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/does-the-patient-live-in-another-country.html
@@ -2,14 +2,13 @@
 
 {% extends "../../layouts/question-page.html" %}
 
-{% set pageName = "Patient’s details" %}
 {% set currentPage = "does-the-patient-live-in-another-country" %}
 {% set questionGroup = "patient-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set nextPage = "practitioner-clinic-postcode" %}
 {% set questionNumber = 1 %}
 {% set totalQuestions = 9 %}
-{% set sectionTitle = "Patient’s details" %}
+{% set sectionTitle = "Patient's details" %}
 
 {% block form %}
 
