--- a/DHSC.ANS.Service/app/views/questions/patient-details/hsa1-signing-location-postcode.html
+++ b/DHSC.ANS.Service/app/views/questions/patient-details/hsa1-signing-location-postcode.html
@@ -3,14 +3,13 @@
 
 {% extends "../../layouts/question-page.html" %}
 
-{% set pageName = "Practitioner’s details" %}
 {% set currentPage = "hsa1-signing-location-postcode" %}
 {% set questionGroup = "practitioner-details" %}
 {% set formAction = "/questions/" + questionGroup + "/" + currentPage %}
 {% set nextPage = "" %}
 {% set questionNumber = 5 %}
 {% set totalQuestions = 9 %}
-{% set sectionTitle = "Terminating practitioner and certifying practitioners’ details" %}
+{% set sectionTitle = "Terminating practitioner and certifying practitioners' details" %}
 
 {% block form %}
   <input type="hidden" name="currentPage" value="{{ currentPage }}">
