--- a/DHSC.ANS.Service/app/views/layouts/main.html
+++ b/DHSC.ANS.Service/app/views/layouts/main.html
@@ -3,4 +3,15 @@ For guidance on how to use layouts see:
 https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 #}
 
+{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+
+{% block beforeContent %}
+    {{ govukPhaseBanner({
+        tag: {
+        text: "Alpha"
+        },
+        html: 'This is a new service. Help us improve it and <a class="govuk-link" href="#">give your feedback by email</a>.'
+    }) }}
+{% endblock %}
+
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
